--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.3",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.36.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-import": "^2.32.0",
@@ -36,7 +37,10 @@
     "globals": "^16.4.0",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.1",
+    "postcss": "^8.5.6",
     "prettier": "^3.6.2",
+    "prop-types": "^15.8.1",
+    "tailwindcss": "^4.1.13",
     "vite": "^7.1.7"
   },
   "lint-staged": {
