--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.12.2",
     "clsx": "^2.1.1",
     "emoji-picker-element": "^1.27.0",
     "react": "^19.1.1",
